--- a/.github/workflows/blog-post.yml
+++ b/.github/workflows/blog-post.yml
@@ -14,10 +14,15 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+
       - name: Pull in Hashnode posts
         uses: gautamkrishnar/blog-post-workflow@master
         with:
           feed_list: "https://saachis-blog.hashnode.dev/rss.xml"
           max_post_count: 1
           comment_tag_name: "HASHNODE_BLOG"
+          readme_path: "README.md"
+          gh_token: ${{ secrets.GITHUB_TOKEN }}
+          # THIS LINE BELOW IS THE FIX:
+          user_agent: "Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/91.0.4472.124 Safari/537.36"
           template: "<table><tr><td><a href='$url'><img src='$cover_image' width='300' alt='$title' /></a></td><td><a href='$url'><strong>$title</strong></a><br/>$description...</td></tr></table>"
